--- a/example-bench-config.yml
+++ b/example-bench-config.yml
@@ -1,8 +1,11 @@
+execution: "serial"
 bench_cases:
-#    - name: "insert-person"
-#      concurrency: 100
+   - name: "insert-person"
+     concurrency: 100
+     time: 10
    - name: "insert-friend"
      concurrency: 100
+     time: 10
     # - name: "get-friends-one-hop"
     #   concurrency: 100
 #    - name: "get-friends-two-hop"
